--- a/css/styles.css
+++ b/css/styles.css
@@ -1,929 +1,51 @@
+/*Global_styles*/
 
-.main-nav {
-    display: flex;
-    margin-right: auto;
-    align-items: center;
-}
 
-.logo {
-    color: var(--first-logo-color);
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    margin-right: 93px;
-    padding: 24px 0px 25px 0px;
-}
+/*Navigation-bar*/
 
-.logo--black {
-    color: var(--second-logo-color);
-}
+
 
 /*Navigation_links*/
 
-.main-nav__list {
-    gap: 50px;
-    display: flex;
-}
 
-.main-nav__link {
-    color: inherit;
-    padding: 32px 0px;
-    position: relative;
-    transition: color 250ms var(--transition-function);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-}
-
-.main-nav__link--current {
-    color: var(--first-logo-color);
-    padding: 32px 0px;
-    position: relative;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-}
-
-.main-nav__link:hover,
-.main-nav__link:focus {
-    color: var(--first-logo-color);
-}
-
-.main-nav__link--current::after {
-    content: '';
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: var(--first-logo-color);
-    border-radius: 2px;
-    position: absolute;
-    bottom: -1px;
-}
 
 /*Contacts*/
 
-.contacts-list {
-    display: flex;
-    align-items: center;
-    gap: 30px;
-}
 
-.contacts-list__link {   
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--descriprion-color);
-    padding: 32px 0px;
-    display: flex;
-    align-items: center;
-    transition: color 250ms var(--transition-function);
-    gap: 10px;
-}
-
-.contacts-list__link:hover,
-.contacts-list__link:focus {
-    color: var(--first-logo-color);
-} 
-
-
-.contacts-list__icon {
-    fill: currentColor;
-}
 
 /*Hero*/
 
-.hero {
-    background-color: var(--face-background);
-    color: var(--main-color);
-    text-align: center;
-    background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), 
-    url(../images/header-img.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.hero__container {
-    margin: 0px auto;
-    width: 1200px;
-    padding: 200px 15px;
-}
-
-.hero__header {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    width: 700px;
-    margin: 0px auto 30px;
-}
-
-.order-button {
-    cursor: pointer;
-    background: var(--first-logo-color);
-    border-color: transparent;
-    border-radius: 4px;
-    color: inherit;
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    padding: 8px 30px;
-    transition: background 250ms var(--transition-function),
-                box-shadow 250ms var(--transition-function);
-}
-
-.order-button:hover,
-.order-button:focus {
-    background: var(--button-active-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
 
 /*Features*/
 
-.features {
-    padding: 94px 0px;
-}
 
-.features__container {
-    margin: 0px auto;
-    width: 1200px;
-    padding: 0px 15px;
-
-}
-
-.features__title--visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-    clip-path: inset(50%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-.features__list {
-    display: flex;
-    gap: 30px;
-}
-
-.feature {
-    width: 270px;
-}
-
-.feature__icon-container {
-    width: 270px;
-    height: 120px;
-    background-color: var(--team-section-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-    border-radius: 4px;
-}
-
-.feature__icon {
-    width: 70px;
-    height: 70px;
-    background-color: var(--team-section-color);
-}
-
-.feature__title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-}
-
-.feature__descr {
-    color: var(--descriprion-color);
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-}
 
 /*Activities gallery*/
 
-.activities {
-    padding-bottom: 94px;
-}
-
-.activities__container {
-    margin: 0px auto;
-    width: 1200px;
-    padding: 0px 15px;
-}
-
-.activities__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-}
-
-.activities__list {
-    display: flex;
-    gap: 30px;
-}
-
-.activity {
-    position: relative;
-}
-
-.activity__descr {
-    position: absolute;
-    bottom: 0px;
-    padding: 27px 0px;
-    width: 100%;
-    background-color: var(--activity-descr-color);
-    color: var(--main-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-}
 
 /*Team_section*/
 
-.team-section {
-    background: var(--team-section-color);
-    padding: 94px 0px;
-}
 
-.team-section__container {
-    margin: 0px auto;
-    width: 1200px;
-    padding: 0px 15px;
-}
-
-.team-section__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-}
-
-.team-section__workers-list {
-    display: flex;
-    gap: 30px;
-}
-
-/* Employees cards */
-
-.employee {
-    background-color: var(--main-color);
-}
-
-.employee__photo {
-    width: 270px;
-    height: 260px;
-}
-
-.employee__description {
-    padding: 30px;
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-
-}
-
-.employee__title  {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 10px;
-}
-
-.employee__position {
-    color: var(--descriprion-color);
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 16px;
-}
-
-.employee__social-links {
-    display: flex;
-    gap: 10px;
-}
-
-.employee__social-link {
-    display: flex;
-    width: 44px;
-    height: 44px;
-    align-items: center;
-    border-radius: 50%;
-    justify-content: center;
-    transition: background-color 250ms var(--transition-function);
-}
-
-.employee__social-icon {
-    fill: var(--social-link-color);
-    transition: fill 250ms var(--transition-function);
-}
-
-.employee__social-link:hover,
-.employee__social-link:focus {
-    background-color: var(--first-logo-color);
-}
-
-.employee__social-link:hover .employee__social-icon,
-.employee__social-link:focus .employee__social-icon {
-    fill: var(--main-color);
-}
 
 /* Clients_section*/
 
-.clients {
-    padding: 94px 0px;
-}
-
-.clients__container {
-    margin: 0px auto;
-    width: 1200px;
-    padding: 0px 15px;
-}
-
-.clients__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-}
-
-.clients__list {
-    text-decoration: none;
-    display: flex;
-    gap: 30px;
-}
-
-.link-client {
-    width: 170px;
-    height: 92px;
-    border: solid 1px var(--social-link-color);
-    border-radius: 4px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    transition: border-color 250ms var(--transition-function);
-}
-
-.link-client__logo {
-    fill: var(--social-link-color);
-    transition: fill 250ms var(--transition-function);
-}
-
-.link-client:hover {
-    border-color: var(--first-logo-color);
-}
-
-.link-client:hover .link-client__logo {
-    fill: var(--first-logo-color);
-}
-
-.link-client:focus {
-    border-color: var(--first-logo-color);
-}
-
-.link-client:focus .link-client__logo {
-    fill: var(--first-logo-color);
-}
 
 /*Basement*/
 
-.footer {
-    background: var(--second-color);
-    padding: 60px 0px;
-}
-
-.footer__container {
-    margin: 0px auto;
-    width: 1200px;
-    padding: 0px 15px;
-    display: flex;
-    align-items: baseline;
-}
-
-.address-container {
-    margin-right: 70px;
-}
-
-/*Basement_logo*/
-
-.address-container__logo {
-    color: var(--first-logo-color);
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    margin-bottom:  20px;
-}
-
-.address-container__logo--white {
-    color: var(--main-color);
-}
-
 /* Basement_contacts */
-
-.footer-contacts {
-    font-style: inherit;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-}
-
-.footer-contacts__list {
-    display: flex;
-    flex-direction: column;
-    gap: 9px;
-}
-
-
-.footer__contact--light {
-    color: var(--main-color);
-    transition: color 250ms var(--transition-function);
-}
-
-.footer__contact--dark {
-    color: var(--basement-contakts-color);
-    transition: color 250ms var(--transition-function);
-}
-
-.footer__contact--light:hover,
-.footer__contact--light:focus,
-.footer__contact--dark:hover,
-.footer__contact--dark:focus {
-    color:  var(--first-logo-color);
-}
 
 /* Invite_block */
 
-.invite-container {
-    margin-right: 93px;
-}
 
-.invite-container__title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--main-color);
-    margin-bottom: 20px;
-}
-
-.invite-container__list {
-    display: flex;
-    gap: 10px;
-}
-
-.invite-container__link {
-    display: flex;
-    width: 44px;
-    height: 44px;
-    align-items: center;
-    border-radius: 50%;
-    justify-content: center;
-    background: var(--basement-social-link-color);
-}
-
-.invite-container__social-icon {
-    fill: var(--main-color);
-}
-
-.invite-container__link:hover,
-.invite-container__link:focus {
-    background-color: var(--first-logo-color);
-    transition: background-color 250ms var(--transition-function);
-}
 
 /* Mailing_form */
 
-.mailing-form__title {
-    display: block;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--main-color);
-    margin-bottom: 20px;
-}
-
-.mailing-form__field-wrapper {
-    position: relative;
-    display: flex;
-}
-
-.mailing-form__field {
-    border: solid 1px var(--mailing-field-border);
-    background-color: transparent;
-    border-radius: 4px;
-    padding:  15px 16px;
-    width: 358px;
-    outline: transparent;
-    margin-right: 12px;
-    color: var(--main-color);
-}
-
-.mailing-field::placeholder {
-    color: var(--mailing-plaseholder-color);
-}
-
-.mailing-button {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 0px;
-    width: 200px;
-    background-color: var(--first-logo-color);
-    border-color: transparent;
-    border-radius: 4px;
-    padding: 10px 28px;
-    color: var(--main-color);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 30px;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-}
-
-.mailing-button__icon {
-    fill: var(--main-color);
-}
 
 /* Modal window */
 
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--modal-background);
-    filter: blur(0px);
-    transition: opacity 250ms var(--transition-function),
-                visibility 250ms var(--transition-function);
-}
 
-.backdrop.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-}
-
-.modal {
-    position: absolute;
-    top: 221px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    background-color: var(--main-color);
-    width: 528px;
-    height: 581px;
-    border-radius: 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    scale: 100%;
-    transition: transform 250ms var(--transition-function);
-    padding: 40px;
-}
-
-.backdrop.backdrop.is-hidden .modal {
-    transform: translate(-50%, 20%);
-    
-}
-
-.close-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    background-color: transparent;
-    border: 1px solid var(--modal-close-btn);
-    border-radius: 50%;
-    padding: 0px;
-    top: 8px;
-    right: 8px;
-}
-
-.close-btn-icon {
-    fill: var(--second-logo-color);
-    transition: fill 250ms var(--transition-function)
-}
-
-.close-btn:hover .close-btn-icon,
-.close-btn:focus .close-btn-icon {
-    fill: var(--first-logo-color);
-}
-
-.modal-title {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 12px;
-    display: block;
-}
 
 /* Form_Styles */
 
-.form-wrapper {
-    position: relative;
-}
-
-.form-list {
-    margin-bottom: 20px;
-    
-}
-
-.field-item {
-    margin-bottom: 10px;
-}
-
-.form-icon {
-    position: absolute;
-    top: 50%;
-    left: 12px;
-    transform: translateY(-50%);
-    transition: fill 250ms var(--transition-function);
-}
-
-.form-field {
-    outline: transparent;
-    width: 100%;
-    padding: 11px 12px 11px 42px;
-    border-radius:  4px;
-    border:  solid 1px;
-    border-color: var(--form-field-border-color);
-    transition: border-color 250ms var(--transition-function);
-    font-size: 14px;
-}
-
-.form-field:focus {
-    border-color: var(--first-logo-color);
-}
-
-.form-field:focus + .form-icon {
-    fill: var(--first-logo-color);
-}
-
-.comment-field {
-    display: block;
-    padding: 11px 16px;
-    resize: none;
-    width: 448px;
-    height: 120px;
-    
-}
-
-.form-label {
-    display: block;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    margin-bottom: 4px;
-    color: var(--descriprion-color);
-}
-
-.checkbox-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.checkbox-label {
-    margin-bottom: 30px;
-    display: flex;
-    align-items: center;
-}
-
-.form-checkbox {
-    appearance: none;
-}
-
-.form-checkbox-icon {
-    margin-right: 8px;
-    cursor: pointer;
-}
-
-.form-checkbox-icon .uncheck {
-    opacity: 1;
-    transition: opacity 250ms var(--transition-function);
-}
-
-.form-checkbox:checked + .form-checkbox-icon .uncheck {
-    opacity: 0;
-    
-}
-
-.form-checkbox-icon .check {
-    opacity: 0;
-    transition: opacity 250ms var(--transition-function);
-}
-
-.form-checkbox:checked + .form-checkbox-icon .check {
-    opacity: 1;
-}
-
-.terms-chackbox {
-    appearance: none;
-}
-
-.checkbox-descr {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
-    color: var(--descriprion-color);
-    user-select: none;
-}
-
-.terms-link {
-    color: var(--first-logo-color);
-}
-
-.submit-button {
-    padding:  10px 52px;
-    color: var(--main-color);
-    background-color: var(--submit-button-color);
-    border: none;
-    border-radius: 4px;
-    transition: box-shadow 250ms var(--transition-function);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-
-}
-
-.submit-button:hover,
-.submit-button:focus {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-
 /*PORTFOLIO_PAGE_STYLES*/
 
-.portfolio {
-    padding: 94px 0px;
-}
-
-.portfolio__title--visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-    clip-path: inset(50%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-/*Filters*/
-
-.filt-but {
-    cursor: pointer;
-    background: var(--team-section-color);
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    letter-spacing: 0.03em;
-    border-color: transparent;
-    border-radius: 4px;
-    padding: 6px 22px;
-    transition: background 250ms var(--transition-function),
-                box-shadow 250ms var(--transition-function),
-                color 250ms var(--transition-function);
-}
-
-.filt-but:hover,
-.filt-but:focus {
-    background: var(--first-logo-color);
-    color: var(--main-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.filters h2,
-.projects h2 {
-    color: var(--main-color);
-}
-
-/*Projects*/
-
-.projects-container {
-    margin: 0px auto;
-    width: 1200px;
-    padding: 0px 15px;
-}
-
-.filters-list {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
-
-}
-
-.button:not(:last-child) {
-    margin-right: 8px;
-}
-
-.projects-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-}
-
-.project-item {
-    transition: box-shadow 250ms var(--transition-function);
-}
-
-.project-item:hover,
-.project-item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.description-box {
-    padding: 20px 24px;
-    border-right: solid 1px var(--border-color);
-    border-bottom: solid 1px var(--border-color);
-    border-left: solid 1px var(--border-color);
-}
-
-.project-title {
-    color: var(--main-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2.0;
-    letter-spacing: 0.06em;
-    margin-bottom: 4px;
-}
-
-.project-descr {
-    color: var(--descriprion-color);
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.03em;
-}
-
-.item-wrapper {
-    position: relative;
-    overflow: hidden;
-}
-
-.item-overlay {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: var(--    -overlay-color);
-    padding: 63px 24px;
-    color: var(--main-color);
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 0.03em;
-    transition: transform 250ms var(--transition-function);
-}
-
-.project-item:hover .item-overlay,
-.project-item:focus .item-overlay {
-    transform: translateY(-100%);
-}
