--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,39 @@
 // Variables
 @import "./utils/variables";
-// Global-styles
+// Global_styles
 @import "./base/base";
 // Reset
 @import "./base/reset";
-// Navigation-bar
+// v-hidden
+@import "./utils/v-hidden";
+// Header_section
 @import "./components/header";
-// Header-logo
-@import "./components/header-logo"
+// Navigation_links
+@import "./components/navigation-links";
+// Contacts
+@import "./components/contacts";
+// Hero
+@import "./components/hero";
+// Features
+@import "./components/features";
+// Activities_gallery
+@import "./components/activities-gallery";
+// Team_cards
+@import "./components/team-cards";
+// Clients_gallery
+@import "./components/clients-gallery";
+// Footer
+@import "./components/footer";
+// Addresses
+@import "./components/addresses";
+// Invite_links
+@import "./components/invite-links";
+// Mailing_form
+@import "./components/mailing-form";
+// Modal_window
+@import "./components/modal-window";
+// Modal_window_form
+@import "./components/modal-window-form";
+
+// Portfolio_page_styles
+@import "./components/portfolio-page";
