--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,3 +37,7 @@
 
 // Portfolio_page_styles
 @import "./components/portfolio-page";
+// Portfolio_filters
+@import "./components/portfolio-filters";
+// Portfolio_projects
+@import "./components/portfolio-projects"
