--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -1,135 +1,13 @@
 .portfolio {
     padding: 94px 0px;
-}
 
-.portfolio__title {
-    
+    &__container {
+            margin: 0px auto;
+            width: 1200px;
+            padding: 0px 15px;
+        }
 }
 
 .portfolio__title--visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-    clip-path: inset(50%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-/*Filters*/
-
-.filt-but {
-    cursor: pointer;
-    background: var(--team-section-color);
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    letter-spacing: 0.03em;
-    border-color: transparent;
-    border-radius: 4px;
-    padding: 6px 22px;
-    transition: background 250ms var(--transition-function),
-        box-shadow 250ms var(--transition-function),
-        color 250ms var(--transition-function);
-}
-
-.filt-but:hover,
-.filt-but:focus {
-    background: var(--first-logo-color);
-    color: var(--main-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.filters h2,
-.projects h2 {
-    color: var(--main-color);
-}
-
-/*Projects*/
-
-.projects-container {
-    margin: 0px auto;
-    width: 1200px;
-    padding: 0px 15px;
-}
-
-.filters-list {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
-
-}
-
-.button:not(:last-child) {
-    margin-right: 8px;
-}
-
-.projects-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-}
-
-.project-item {
-    transition: box-shadow 250ms var(--transition-function);
-}
-
-.project-item:hover,
-.project-item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.description-box {
-    padding: 20px 24px;
-    border-right: solid 1px var(--border-color);
-    border-bottom: solid 1px var(--border-color);
-    border-left: solid 1px var(--border-color);
-}
-
-.project-title {
-    color: var(--main-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2.0;
-    letter-spacing: 0.06em;
-    margin-bottom: 4px;
-}
-
-.project-descr {
-    color: var(--descriprion-color);
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.03em;
-}
-
-.item-wrapper {
-    position: relative;
-    overflow: hidden;
-}
-
-.item-overlay {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: var(--portfolio-overlay-color);
-    padding: 63px 24px;
-    color: var(--main-color);
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 0.03em;
-    transition: transform 250ms var(--transition-function);
-}
-
-.project-item:hover .item-overlay,
-.project-item:focus .item-overlay {
-    transform: translateY(-100%);
+    @extend %visually-hidden;
 }
